<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.zhengsuren.olddriver.MainActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/logo"
        android:layout_marginTop="49dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clickable="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:hint="@string/IDhint"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:id="@+id/password"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:password="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NoAccount"
        android:id="@+id/textView"
        android:layout_marginRight="66dp"
        android:layout_marginEnd="66dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/regist"
        android:layout_toStartOf="@+id/regist"
        android:layout_marginBottom="103dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/regist"
        android:layout_marginRight="84dp"
        android:layout_marginEnd="84dp"
        android:clickable="true"
        android:textColor="#3210f7"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contextClickable="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:id="@+id/button"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:background="#3fa314"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Declare"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/regist"
        android:layout_toStartOf="@+id/regist" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DelDoc"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="41dp"
        android:layout_marginEnd="41dp"
        android:clickable="true"
        android:contextClickable="true"
        android:textColor="#3210f7" />
</RelativeLayout>
